add google icons and materialize css to client

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -7,6 +7,13 @@
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="EMS an HR Managment System" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+
+    <!-- Google Icons -->
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
+
     <title>EMS an HR Managment System</title>
   </head>
   <body>
