replace npm fontawesome with cdn

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -8,11 +8,15 @@
     <meta name="description" content="EMS an HR Managment System" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <!-- Google Icons -->
+    <!-- Font Awesome && Google Icons -->
     <link
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
     />
+    <script
+      src="https://kit.fontawesome.com/69d7d251be.js"
+      crossorigin="anonymous"
+    ></script>
 
     <title>EMS an HR Managment System</title>
   </head>
