add material ui and new dropdown

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -8,6 +8,12 @@
     <meta name="description" content="EMS an HR Managment System" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
+    <!-- Material UI responsive meta tag -->
+    <meta
+      name="viewport"
+      content="minimum-scale=1, initial-scale=1, width=device-width"
+    />
+
     <!-- Font Awesome && Google Icons -->
     <link
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
